--- a/api/global/models/global.settings.json
+++ b/api/global/models/global.settings.json
@@ -32,6 +32,16 @@
       "repeatable": false,
       "component": "shared.seo",
       "required": true
+    },
+    "header": {
+      "type": "component",
+      "repeatable": false,
+      "component": "organisms.header"
+    },
+    "footer": {
+      "type": "component",
+      "repeatable": false,
+      "component": "organisms.footer"
     }
   }
 }
