--- a/api/home-page/models/home-page.settings.json
+++ b/api/home-page/models/home-page.settings.json
@@ -12,7 +12,7 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "pageIntro": {
+    "textSection": {
       "type": "component",
       "repeatable": false,
       "component": "organisms.text-image-section"
