--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A Strapi application",
   "scripts": {
     "dev": "strapi develop",
+    "admin-dev": "develop -- --watch-admin",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
