Gallery: first version

--- a/api/pages/models/page.settings.json
+++ b/api/pages/models/page.settings.json
@@ -73,7 +73,8 @@
         "organisms.post-list",
         "organisms.card-list",
         "organisms.contact",
-        "organisms.accordion-list"
+        "organisms.accordion-list",
+        "organisms.gallery"
       ]
     }
   }
