Add cloudinary as media upload location

--- a/.example.env
+++ b/.example.env
@@ -12,3 +12,8 @@ DATABASE_PASSWORD=password
 DATABASE_NAME=name
 DATABASE_PORT=port
 DATABASE_SCHEMA=public
+
+# Cloudinary
+CLOUDINARY_NAME=name
+CLOUDINARY_KEY=key
+CLOUDINARY_SECRET=secret
