--- a/.example.env
+++ b/.example.env
@@ -3,17 +3,19 @@ HOST=0.0.0.0
 PORT=1337
 
 # JWT
-JWT_SECRET=secret
+JWT_SECRET="secret"
 
-# DB
-DATABASE_HOST=localhost
-DATABASE_USERNAME=username
-DATABASE_PASSWORD=password
-DATABASE_NAME=name
-DATABASE_PORT=port
-DATABASE_SCHEMA=public
+# Database
+DATABASE_HOST="localhost"
+DATABASE_USERNAME="database_username"
+DATABASE_PASSWORD="database_password"
+DATABASE_NAME="database_name"
+DATABASE_PORT="5432"
+DATABASE_SCHEMA="public"
+DATABASE_URL="localhost"
 
 # Cloudinary
-CLOUDINARY_NAME=name
-CLOUDINARY_KEY=key
-CLOUDINARY_SECRET=secret
+CLOUDINARY_NAME="cloudinary_name"
+CLOUDINARY_KEY="cloudinary_key"
+CLOUDINARY_SECRET="cloudinary_secret"
+CLOUDINARY_UPLOAD_PATH="/upload/path"
