Add Image atom and image settings

--- a/api/pages/models/page.settings.json
+++ b/api/pages/models/page.settings.json
@@ -69,14 +69,14 @@
       },
       "type": "dynamiczone",
       "components": [
-        "organisms.text",
         "organisms.post-list",
         "organisms.card-list",
         "organisms.contact",
         "organisms.accordion-list",
         "organisms.gallery",
         "organisms.featured-text",
-        "organisms.rating"
+        "organisms.rating",
+        "organisms.text"
       ]
     }
   }
