--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -35,16 +35,9 @@
       "required": true
     },
     "image": {
-      "model": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos"
-      ],
-      "plugin": "upload",
-      "required": false,
-      "pluginOptions": {}
+      "type": "component",
+      "repeatable": false,
+      "component": "atoms.image"
     },
     "longText": {
       "type": "richtext"
