Restructure posts & text block

--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -34,13 +34,12 @@
       "type": "richtext",
       "required": true
     },
-    "image": {
-      "type": "component",
-      "repeatable": false,
-      "component": "atoms.image"
-    },
-    "longText": {
-      "type": "richtext"
+    "dynamicZone": {
+      "type": "dynamiczone",
+      "components": [
+        "organisms.gallery",
+        "organisms.text"
+      ]
     }
   }
 }
